--- a/w2_preprocessing.ipynb
+++ b/w2_preprocessing.ipynb
@@ -2,15 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "data = [{'age' : 4, 'height' : 96.0},\n",
+    "        {'age' : 1, 'height' : 73.9},\n",
+    "        {'age' : 3, 'height' : 88.9},\n",
+    "        {'age' : 2, 'height' : 81.6}]"
+   ],
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[ 4. , 96. ],\n       [ 1. , 73.9],\n       [ 3. , 88.9],\n       [ 2. , 81.6]])"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction import DictVectorizer\n",
+    "dv = DictVectorizer(sparse=False)\n",
+    "dv.fit_transform(data)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
