--- a/W3_regression.ipynb
+++ b/W3_regression.ipynb
@@ -153,16 +153,194 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Demonstration"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from sklearn.datasets import fetch_california_housing\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import learning_curve\n",
+    "from sklearn.model_selection import ShuffleSplit\n",
+    "\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "outputs": [],
-   "source": []
+   "source": [
+    "np.random.seed(306)\n",
+    "shuffle_split_cv = ShuffleSplit(n_splits=10,test_size=0.2,random_state=10)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20640, 8)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "(20640,)"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features, labels = fetch_california_housing(as_frame=True, return_X_y=True)\n",
+    "print(features.shape)\n",
+    "assert (features.shape[0]==labels.shape[-1])\n",
+    "labels.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15480\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "5160"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#splitting the data\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "train_features, test_features, train_labels,test_labels = train_test_split(features,labels,random_state=42)\n",
+    "print(train_features.shape[0])\n",
+    "test_features.shape[0]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Pipeline(steps=[('feature_scaling', StandardScaler()),\n                ('lin_reg', LinearRegression())])"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#pipeline = preprocessing+model\n",
+    "lin_reg_pipeline = Pipeline([(\"feature_scaling\",StandardScaler()),(\"lin_reg\",LinearRegression())])\n",
+    "lin_reg_pipeline.fit(train_features,train_labels) #lin reg with normal eqn"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0703489205426377\n",
+      "[ 0.85210815  0.12065533 -0.30210555  0.34860575 -0.00164465 -0.04116356\n",
+      " -0.89314697 -0.86784046]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lin_reg_pipeline[-1].intercept_)#intercept\n",
+    "print(lin_reg_pipeline[-1].coef_)#weight vectors"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#model evaluation\n",
+    "test_score = lin_reg_pipeline(test_features,test_labels)\n",
+    "print(\"test score\",test_score)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
