--- a/pizza.ipynb
+++ b/pizza.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -44,7 +44,7 @@
       "text/plain": "  brand     id   mois   prot    fat   ash  sodium  carb   cal\n0     A  14069  27.82  21.43  44.87  5.11    1.77  0.77  4.93\n1     A  14053  28.49  21.26  43.89  5.34    1.79  1.02  4.84\n2     A  14025  28.35  19.99  45.78  5.08    1.63  0.80  4.95\n3     A  14016  30.55  20.15  43.13  4.79    1.61  1.38  4.74\n4     A  14005  30.49  21.28  41.65  4.82    1.64  1.76  4.67",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>brand</th>\n      <th>id</th>\n      <th>mois</th>\n      <th>prot</th>\n      <th>fat</th>\n      <th>ash</th>\n      <th>sodium</th>\n      <th>carb</th>\n      <th>cal</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>A</td>\n      <td>14069</td>\n      <td>27.82</td>\n      <td>21.43</td>\n      <td>44.87</td>\n      <td>5.11</td>\n      <td>1.77</td>\n      <td>0.77</td>\n      <td>4.93</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>A</td>\n      <td>14053</td>\n      <td>28.49</td>\n      <td>21.26</td>\n      <td>43.89</td>\n      <td>5.34</td>\n      <td>1.79</td>\n      <td>1.02</td>\n      <td>4.84</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>A</td>\n      <td>14025</td>\n      <td>28.35</td>\n      <td>19.99</td>\n      <td>45.78</td>\n      <td>5.08</td>\n      <td>1.63</td>\n      <td>0.80</td>\n      <td>4.95</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>A</td>\n      <td>14016</td>\n      <td>30.55</td>\n      <td>20.15</td>\n      <td>43.13</td>\n      <td>4.79</td>\n      <td>1.61</td>\n      <td>1.38</td>\n      <td>4.74</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>A</td>\n      <td>14005</td>\n      <td>30.49</td>\n      <td>21.28</td>\n      <td>41.65</td>\n      <td>4.82</td>\n      <td>1.64</td>\n      <td>1.76</td>\n      <td>4.67</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -92,20 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "    brand     id   mois   prot    fat   ash  sodium   carb   cal\n0       A  14069  27.82  21.43  44.87  5.11    1.77   0.77  4.93\n1       A  14053  28.49  21.26  43.89  5.34    1.79   1.02  4.84\n2       A  14025  28.35  19.99  45.78  5.08    1.63   0.80  4.95\n3       A  14016  30.55  20.15  43.13  4.79    1.61   1.38  4.74\n4       A  14005  30.49  21.28  41.65  4.82    1.64   1.76  4.67\n..    ...    ...    ...    ...    ...   ...     ...    ...   ...\n295     J  34044  44.91  11.07  17.00  2.49    0.66  25.36  2.91\n296     J  24069  43.15  11.79  18.46  2.43    0.67  24.17  3.10\n297     J  34039  44.55  11.01  16.03  2.43    0.64  25.98  2.92\n298     J  14044  47.60  10.43  15.18  2.32    0.56  24.47  2.76\n299     J  14045  46.84   9.91  15.50  2.27    0.57  25.48  2.81\n\n[300 rows x 9 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>brand</th>\n      <th>id</th>\n      <th>mois</th>\n      <th>prot</th>\n      <th>fat</th>\n      <th>ash</th>\n      <th>sodium</th>\n      <th>carb</th>\n      <th>cal</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>A</td>\n      <td>14069</td>\n      <td>27.82</td>\n      <td>21.43</td>\n      <td>44.87</td>\n      <td>5.11</td>\n      <td>1.77</td>\n      <td>0.77</td>\n      <td>4.93</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>A</td>\n      <td>14053</td>\n      <td>28.49</td>\n      <td>21.26</td>\n      <td>43.89</td>\n      <td>5.34</td>\n      <td>1.79</td>\n      <td>1.02</td>\n      <td>4.84</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>A</td>\n      <td>14025</td>\n      <td>28.35</td>\n      <td>19.99</td>\n      <td>45.78</td>\n      <td>5.08</td>\n      <td>1.63</td>\n      <td>0.80</td>\n      <td>4.95</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>A</td>\n      <td>14016</td>\n      <td>30.55</td>\n      <td>20.15</td>\n      <td>43.13</td>\n      <td>4.79</td>\n      <td>1.61</td>\n      <td>1.38</td>\n      <td>4.74</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>A</td>\n      <td>14005</td>\n      <td>30.49</td>\n      <td>21.28</td>\n      <td>41.65</td>\n      <td>4.82</td>\n      <td>1.64</td>\n      <td>1.76</td>\n      <td>4.67</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>295</th>\n      <td>J</td>\n      <td>34044</td>\n      <td>44.91</td>\n      <td>11.07</td>\n      <td>17.00</td>\n      <td>2.49</td>\n      <td>0.66</td>\n      <td>25.36</td>\n      <td>2.91</td>\n    </tr>\n    <tr>\n      <th>296</th>\n      <td>J</td>\n      <td>24069</td>\n      <td>43.15</td>\n      <td>11.79</td>\n      <td>18.46</td>\n      <td>2.43</td>\n      <td>0.67</td>\n      <td>24.17</td>\n      <td>3.10</td>\n    </tr>\n    <tr>\n      <th>297</th>\n      <td>J</td>\n      <td>34039</td>\n      <td>44.55</td>\n      <td>11.01</td>\n      <td>16.03</td>\n      <td>2.43</td>\n      <td>0.64</td>\n      <td>25.98</td>\n      <td>2.92</td>\n    </tr>\n    <tr>\n      <th>298</th>\n      <td>J</td>\n      <td>14044</td>\n      <td>47.60</td>\n      <td>10.43</td>\n      <td>15.18</td>\n      <td>2.32</td>\n      <td>0.56</td>\n      <td>24.47</td>\n      <td>2.76</td>\n    </tr>\n    <tr>\n      <th>299</th>\n      <td>J</td>\n      <td>14045</td>\n      <td>46.84</td>\n      <td>9.91</td>\n      <td>15.50</td>\n      <td>2.27</td>\n      <td>0.57</td>\n      <td>25.48</td>\n      <td>2.81</td>\n    </tr>\n  </tbody>\n</table>\n<p>300 rows × 9 columns</p>\n</div>"
+      "text/plain": "brand     0\nid        0\nmois      0\nprot      0\nfat       0\nash       0\nsodium    0\ncarb      0\ncal       0\ndtype: int64"
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pizza"
+    "pizza.isnull().sum()"
    ],
    "metadata": {
     "collapsed": false,
@@ -116,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "dicts = pizza.to_dict('series')"
@@ -130,13 +129,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "pandas.core.frame.DataFrame"
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,13 +152,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "{'brand': 0      A\n 1      A\n 2      A\n 3      A\n 4      A\n       ..\n 295    J\n 296    J\n 297    J\n 298    J\n 299    J\n Name: brand, Length: 300, dtype: object,\n 'id': 0      14069\n 1      14053\n 2      14025\n 3      14016\n 4      14005\n        ...  \n 295    34044\n 296    24069\n 297    34039\n 298    14044\n 299    14045\n Name: id, Length: 300, dtype: int64,\n 'mois': 0      27.82\n 1      28.49\n 2      28.35\n 3      30.55\n 4      30.49\n        ...  \n 295    44.91\n 296    43.15\n 297    44.55\n 298    47.60\n 299    46.84\n Name: mois, Length: 300, dtype: float64,\n 'prot': 0      21.43\n 1      21.26\n 2      19.99\n 3      20.15\n 4      21.28\n        ...  \n 295    11.07\n 296    11.79\n 297    11.01\n 298    10.43\n 299     9.91\n Name: prot, Length: 300, dtype: float64,\n 'fat': 0      44.87\n 1      43.89\n 2      45.78\n 3      43.13\n 4      41.65\n        ...  \n 295    17.00\n 296    18.46\n 297    16.03\n 298    15.18\n 299    15.50\n Name: fat, Length: 300, dtype: float64,\n 'ash': 0      5.11\n 1      5.34\n 2      5.08\n 3      4.79\n 4      4.82\n        ... \n 295    2.49\n 296    2.43\n 297    2.43\n 298    2.32\n 299    2.27\n Name: ash, Length: 300, dtype: float64,\n 'sodium': 0      1.77\n 1      1.79\n 2      1.63\n 3      1.61\n 4      1.64\n        ... \n 295    0.66\n 296    0.67\n 297    0.64\n 298    0.56\n 299    0.57\n Name: sodium, Length: 300, dtype: float64,\n 'carb': 0       0.77\n 1       1.02\n 2       0.80\n 3       1.38\n 4       1.76\n        ...  \n 295    25.36\n 296    24.17\n 297    25.98\n 298    24.47\n 299    25.48\n Name: carb, Length: 300, dtype: float64,\n 'cal': 0      4.93\n 1      4.84\n 2      4.95\n 3      4.74\n 4      4.67\n        ... \n 295    2.91\n 296    3.10\n 297    2.92\n 298    2.76\n 299    2.81\n Name: cal, Length: 300, dtype: float64}"
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
    "source": [],
    "metadata": {
